Added dark/light mode + switcher

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,25 +3,17 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --color-bkg: 210deg 40% 88%;
+  --color-bkg2: 210deg 40% 78%;
+  --color-content: 217deg 32.6% 17.5%;
+  --color-accent1: 288deg 95.8% 90.6%;
+  --color-accent2: 168deg 83.8% 78.2%;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+:root[data-theme="dark"] {
+  --color-bkg: 217deg 32.6% 17.5%;
+  --color-bkg2: 210deg 40% 22%;
+  --color-content: 210deg 40% 98%;
+  --color-accent1: 288deg 95.8% 60.6%;
+  --color-accent2: 168deg 83.8% 48.2%;
 }
